# zyon

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT.md  CONTRIBUTING.md  INSTALL_PROMPT.md  LICENSE  README.md  SETUP.md  TROUBLESHOOTING.md  agent_loop.py  claude_monitor_loop.sh  config.example.py  pyproject.toml  tmux_ensure_zyon.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  DEPLOY_24_7_LINUX.md
docs/plans/: 2026-04-27-trilha-1.md  2026-04-28-oss-distribution.md  2026-04-28-trilha-2-vps-deploy.md  2026-04-30-wizard-ux-i18n.md
scripts/: bootstrap.py  install.ps1  install.sh  start.ps1  start.sh  stop.ps1  stop.sh
src/whatsapp_agent/: __init__.py  add_session.py  discover_lid.py  doctor.py  media_handler.py  monitor.py  send_message.py  setup_config.py  transcribe.py  trends_agent.py  update_webhooks.py  webhook_server.py
tests/: conftest.py  test_add_session.py  test_bootstrap.py  test_media_handler.py  test_send_message.py  test_setup_config.py  test_transcribe.py  test_update_webhooks.py  test_webhook_parser.py
